test/parser/error/err_29_factor_missing_rparen.pl0
program p; 
var x; 
begin 
x := (1 + 2 
end